🐛 (Fix): Api in docker